--- a/style.css
+++ b/style.css
@@ -202,14 +202,13 @@ span {
     and (max-width:980px) {
 
         .joystick-anno {
-            height: 5rem;
-            align-items: center;
+            margin-top: .5rem;
         }
-        .anno-neutral {
+        /* .anno-neutral {
             font-size: 1.5rem;
         }
 
         .anno-coords {
             font-size: 1rem;
-        }
+        } */
     }
